--- a/AboutMe/app/src/main/res/layout/activity_main.xml
+++ b/AboutMe/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="myName"
+            type="com.example.aboutme.MyName" />
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,7 +24,7 @@
             style="@style/NameStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/name"
+            android:text="@={myName.name}"
             android:textAlignment="center" />
 
         <EditText
@@ -41,6 +47,7 @@
             android:background="@color/colorAccent"
             android:paddingBottom="@dimen/small_padding"
             android:textAlignment="center"
+            android:text="@={myName.nickname}"
             android:visibility="gone" />
 
         <Button
