--- a/AndroidTrivia/app/src/main/res/layout/activity_main.xml
+++ b/AndroidTrivia/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,10 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,5 +38,5 @@
                 app:navGraph='@navigation/navigation'
                 app:defaultNavHost="true"/>
         </LinearLayout>
-
+    </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
