load and display images with Glide

--- a/MarsRealEstate/app/src/main/res/layout/fragment_overview.xml
+++ b/MarsRealEstate/app/src/main/res/layout/fragment_overview.xml
@@ -32,6 +32,8 @@
         android:layout_height="match_parent"
         tools:context="com.example.android.marsrealestate.MainActivity">
 
+
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/photos_grid"
             android:layout_width="0dp"
@@ -45,9 +47,19 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            app:spanCount="2"
+            app:spanCount="3"
             listData="@{viewModel.properties}"
             tools:itemCount="16"
             tools:listitem="@layout/grid_view_item" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@+id/photos_grid"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/photos_grid"
+            statusMarsApi="@{viewModel.status}"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
